--- a/areas.html
+++ b/areas.html
@@ -47,20 +47,12 @@
                 </li>
          
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#projects">PROJECTS</a>
-                </li>
-
-                <li class="navigation__item">
                     <a class="navigation__link" href="index.html#support">SUPPORT US</a>
                 </li>
 
 
                 <li class="navigation__item">
                     <a class="navigation__link navigation__link--donate" href="index.html#donate-info">DONATE</a>
-                </li>
-
-                <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#volunteerprogram">VOLUNTEER PROGRAM</a>
                 </li>
 
                 <li class="navigation__item">
@@ -173,10 +165,9 @@
             <section class="sponsor__subsection sponsor__subsection--columns-c">
                 
                 <div class="sponsor__wall">
-                    <p class="sponsor__paragraph">Currently we working on a number of projects. The new building project for our day-care services is one of the projects. At it's completion, it will help us to implement our day-care services in a safer environment and in a more organized way.
-                        Also, as a way to empower more youths and in a more helpful way, Twiga Vision Tanzania secured land from a local government to build a vocation training Centre which will be called TVT Vocational training Centre, it is a five years project, which needs a lot of money to complete. You can help us complete the implementation of these projects as follows</p>
+                    <p class="sponsor__paragraph">Currently we are working on a number of projects for the community Centre project: with this project we are building a new meeting area where our women, children for remedial classes and the youths will be meeting. The sub-projects are, building a wall fence, digging and building a toilet chamber and the toilets, buiding a classroom in which the programs will be taking place, buiding a separate room for the women to sell their goods from as well as buying an incubator for the women to produce chicks that they will be taking home to raise. The project needs at least 10,000,000TZS. You can help us complete the implementation of these projects as follows</p>
 
-                    <p class="sponsor__paragraph sponsor__paragraph--list">- make a <a href="index.html#donate-info" class="link-to-donate">donation</a> towards the overall budget of these projects</p>
+                    <p class="sponsor__paragraph sponsor__paragraph--list">- make a <a href="index.html#donate-info" class="link-to-donate">donation</a> towards the overall budget of these sub-projects</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- pay for one or more things to be instaled (eg. a window, a door, a floor for a room or more)</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- help us find funders elsewhere by writing a proposal for us</p>
                     <p class="sponsor__paragraph sponsor__paragraph--list">- donate learning/teaching materials towards our day-care service</p>
@@ -199,14 +190,14 @@
                 <p class="footer__paragraph">Mobile: <br><span class="footer__important footer__important--lower">+255 753-516-911 / 784-516-911</span></p>
             </section>
 
-            <section class="footer__logo-grid">
-                <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
-                <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
-            </section>
-            <section class="footer__contact">
-                <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
-                <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
-            </section>
+               <!--- <section class="footer__logo-grid">
+                    <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
+                    <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
+                </section>
+                <section class="footer__contact">
+                    <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
+                    <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
+                </section> -->
 
         </div>
         <div class="footer__ruler"></div>
