--- a/projects.html
+++ b/projects.html
@@ -47,20 +47,12 @@
                 </li>
          
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#projects">PROJECTS</a>
-                </li>
-
-                <li class="navigation__item">
                     <a class="navigation__link" href="index.html#support">SUPPORT US</a>
                 </li>
 
 
                 <li class="navigation__item">
                     <a class="navigation__link navigation__link--donate" href="index.html#donate-info">DONATE</a>
-                </li>
-
-                <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#volunteerprogram">VOLUNTEER PROGRAM</a>
                 </li>
 
                 <li class="navigation__item">
@@ -290,14 +282,14 @@ Assists in difficult times
                 <p class="footer__paragraph">Mobile: <br><span class="footer__important footer__important--lower">+255 753-516-911 / 784-516-911</span></p>
             </section>
 
-            <section class="footer__logo-grid">
-                <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
-                <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
-            </section>
-            <section class="footer__contact">
-                <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
-                <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
-            </section>
+               <!--- <section class="footer__logo-grid">
+                    <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
+                    <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
+                </section>
+                <section class="footer__contact">
+                    <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
+                    <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
+                </section> -->
 
         </div>
         <div class="footer__ruler"></div>
