--- a/articles.html
+++ b/articles.html
@@ -47,10 +47,6 @@
                 </li>
          
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html#projects">PROJECTS</a>
-                </li>
-
-                <li class="navigation__item">
                     <a class="navigation__link" href="index.html#support">SUPPORT US</a>
                 </li>
 
@@ -293,15 +289,14 @@
                 <p class="footer__paragraph">Mobile: <br><span class="footer__important footer__important--lower">+255 753-516-911 / 784-516-911</span></p>
             </section>
             
-            <section class="footer__logo-grid">
-                <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
-                <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
-            </section>
-            <section class="footer__contact">
-                <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
-                <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
-            </section>
-
+               <!--- <section class="footer__logo-grid">
+                    <img class="footer__logo-img" src="img/giraffe.svg" alt="Giraffe Logo.">
+                    <h3 class="footer__logo-text">TWIGA VISION<br>GERMANY</h3>
+                </section>
+                <section class="footer__contact">
+                    <p class="footer__paragraph">Email address: <br><span class="footer__important footer__important--lower">twigavisiongermany@gmail.com</span></p>
+                    <p class="footer__paragraph">WhatsApp: <br><span class="footer__important footer__important--lower"> +49 17681454921 </span></p>
+                </section> -->
 
 
 
