another change for the article section

--- a/articles.html
+++ b/articles.html
@@ -196,7 +196,7 @@
 
             <section class="articles articles--one" id="004">
                 <header>
-                    <h2 class="articles__header">The swap: Johanna, Ina leave. Croline, Claire Arive</h2>
+                    <h2 class="articles__header">The swap: Johanna, Ina leave. Croline, Claire Arrive</h2>
                 </header>
                 <section class="articles__subsection">
                     <div class="articles__wall">
